<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>jar</packaging>
	<groupId>com.xuchg</groupId>
	<artifactId>KuduPlus</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<description>RedisPlus project for Spring Boot</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.0.3.RELEASE</version>
		<relativePath /> 
	</parent>

	<properties>
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<dependencies>

		<!--boot依赖 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<!-- jpa -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<!--邮件依赖 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>

		<!--lombok插件 -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<!--fastjson依赖 -->
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>[1.2.31,)</version>
		</dependency>

		<!--derby内嵌数据库依赖 -->
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derby</artifactId>
		</dependency>

		<!--druid数据源依赖 -->
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>druid</artifactId>
			<version>1.0.31</version>
		</dependency>

		<!-- 日志 -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		
		<!-- commons-lang3 -->
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		    <version>3.4</version>
		</dependency>
		
		<!-- kudu-client -->
		<dependency>
		    <groupId>org.apache.kudu</groupId>
		    <artifactId>kudu-client</artifactId>
		    <version>1.8.0</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>

			<!--javafx application package -->
			<plugin>
				<groupId>com.zenjava</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>8.8.3</version>
				<configuration>
					<!--启动类 -->
					<mainClass>com.xuchg.MainApplication</mainClass>
					<!--运行文件名 -->
					<appName>KuduPlus</appName>
					<!--启用自定义打包配置 -->
					<verbose>true</verbose>
					<!--菜单图标 -->
					<needMenu>true</needMenu>
					<!--桌面图标 -->
					<needShortcut>true</needShortcut>
					<!--JVM参数 -->
					<jvmArgs>
						<jvmArg>-Xms50M</jvmArg>
						<jvmArg>-Xmx100M</jvmArg>
						<jvmArg>-XX:MaxPermSize=100M</jvmArg>
						<jvmArg>-XX:-UseGCOverheadLimit</jvmArg>
						<jvmArg>-Dvisualvm.display.name=KuduPlus</jvmArg>
					</jvmArgs>
					<!--安装配置项 -->
					<bundleArguments>
						<installdirChooser>true</installdirChooser>
					</bundleArguments>
					<!--允许所有权限 -->
					<allPermissions>true</allPermissions>
					<!--版本信息 -->
					<nativeReleaseVersion>v1.0.0</nativeReleaseVersion>
					<!--说明信息 -->
					<description>
						KuduPlus是kudu可视化管理工具
					</description>
				</configuration>
			</plugin>

		</plugins>
	</build>

</project>
